[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doculink"
version = "0.1.0"
description = "Real-time documentation linker for developers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "hallucinaut", email = "hallucinaut@users.noreply.github.com"}
]
keywords = ["documentation", "developer-tools", "context", "reference", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "asttokens>=2.0.0",
    "anyio>=4.0.0",
    "rich>=13.0.0",
]

[project.scripts]
doculink = "doculink.daemon:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["doculink"]
